# opplyse

./: .gitignore  CMakeLists.txt  README.md  meson.build
cmake-modules/: Elementary.cmake  FindGTKmm.cmake  ValaPrecompile.cmake  config_app.vala.cmake  dependencies.list
src/: CMakeLists.txt  application.vala  common.vala  generic.vala  headerbar.vala  main.cpp  main.vala  meson.build  settings.h.in  window.vala
src/application/: CMakeLists.txt  application.cpp  application.h
src/common/: CMakeLists.txt  generic.cpp  generic.h
src/subwidgets/: CMakeLists.txt  mainheaderbar.cpp  mainheaderbar.h
src/window/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
